--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>My blogs</title>
+    <title>{{blog.title}}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/album/">
 
@@ -48,20 +48,17 @@
 </header>
 
 <main>
-    <h1 class="text-center" pt-3>Welcome to Neha's Blog</h1>
-    <br />
-    <br />
-    <h2>Latest Posts</h2>
-    <hr/>
-        {% for blog in blogs.all %}
-        <a href="{% url 'detail' blog.id %}"><h3> {{ blog.title }} </h3> <a/>
-            {{ blog.pub_date }}
+
+
+        <h1 class="text-center" pt-3>{{ blog.title}}</h1>
+
+    <p class="text-center">{{ blog.pub_date }} </p>
             <br />
             <img class="img-fluid" src="{{ blog.image.url }}" height="100 width=100"/>
             <br />
-            <p>{{ blog.body  }}</p>
+            <p>{{ blog.body }}</p>
             <br />
-        {%  endfor %}
+
 
 
 </main>
